spacer: fix URLs

--- a/CBI/spacer/module.lua.tmpl
+++ b/CBI/spacer/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: utility, cli")
-whatis("URL: https://github.com/zmwangx/ets, https://github.com/zmwangx/ets/releases (releases)")
+whatis("URL: https://github.com/samwho/spacer, https://github.com/samwho/spacer/releases (releases)")
 whatis([[
 Description: If you're the type of person that habitually presses enter a few times in your log tail to know where the last request ended and the new one begins, this tool is for you!
 Examples: `spacer --help`, `tail -f file.log | spacer`.
