--- a/CBI/libgit2/module.lua.tmpl
+++ b/CBI/libgit2/module.lua.tmpl
@@ -15,9 +15,11 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
-prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
+prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib64"))
 
 -- building
-prepend_path("CPATH",  pathJoin(home, "include"))
-prepend_path("CFLAGS", "-I" .. pathJoin(home, "include"), " ")
-prepend_path("LDFLAGS", "-L" .. pathJoin(home, "lib"), " ")
+prepend_path("PKG_CONFIG_PATH",  pathJoin(home, "lib64", "pkgconfig"))
+
+-- prepend_path("CPATH",  pathJoin(home, "include"))
+-- prepend_path("CFLAGS", "-I" .. pathJoin(home, "include"), " ")
+-- prepend_path("LDFLAGS", "-L" .. pathJoin(home, "lib"), " ")
