--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -11,6 +11,7 @@ whatis("URL: https://www.r-project.org/, https://cran.r-project.org/doc/manuals/
 whatis([[
 Description: The R programming language.
 Examples: `R`, `R --version`, and `Rscript --version`.
+Warning: Because Conda negatively affects this software tool, Conda must be deactived in order to load this module.
 ]])
 
 has_devtoolset = function(version)
@@ -140,7 +141,11 @@ pushenv("CMAKE_BIN", "cmake3")
 assert_no_conda_environment = function()  
   local conda_env = os.getenv("CONDA_DEFAULT_ENV")
   if conda_env ~= nil then
-    local action = os.getenv("CBI_ON_CONDA") or "warning"
+    local action = "warning"
+    if v >= "4.5.0" then
+      action = "error"
+    end
+    local action = os.getenv("CBI_ON_CONDA") or action
     local msg = "Using the " .. "'" .. myModuleName() .. "'" .. " module when a Conda environment is active risks resulting in hard-to-troubleshoot errors due to library conflicts. Make sure to deactivate the currently active Conda " .. "'" .. conda_env .. "'" .. " environment before loading this module, e.g. 'conda deactivate'."
     if action == "error" then
       LmodError(msg)
