--- a/CBI/wip-trash-cli/module.lua.tmpl
+++ b/CBI/wip-trash-cli/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: utility, files")
-whatis("URL: https://github.com/aws/aws-cli")
+whatis("URL: https://github.com/andreafrancia/trash-cli, https://github.com/andreafrancia/trash-cli?tab=readme-ov-file#faq (FAQ), https://github.com/andreafrancia/trash-cli/discussions (forum), https://pypi.org/project/trash-cli/#history (change log)")
 whatis([[
 Description: trash-cli trashes files recording the original path, deletion date, and permissions. It provides commands: `trash put` to trash files and directories, `trash empty` to empty the trashca, `trash list` to list trashed files, `trash restore` to restore a trashed file, and `trash rm` to remove individual files from the trashcan.
 Examples: `trash --version`, `trash --help`, and `man trash`.
