--- a/CBI/github-cli/module.lua.tmpl
+++ b/CBI/github-cli/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: utility, file viewer, cli, tui")
 whatis("URL: https://cli.github.com/, https://cli.github.com/manual/ (documentation), https://github.com/cli/cli/releases (changelog), https://github.com/cli/cli/ (source code), https://github.com/topics/gh-extension (GitHub CLI extensions)")
 whatis([[
 Description: `gh` is GitHub on the command line. It brings pull requests, issues, and other GitHub concepts to the terminal next to where you are already working with `git` and your code.
-Examples: `gh --version` and `gh --help`. Setup: `gh auth login` (once). CLI query example: `gh issue list --repo=futureverse/future`. GUI example: `gh extension install dlvhdr/gh-dash` (once), then `gh dash`.
+Examples: `gh --version` and `gh --help`. Setup: `gh auth login` (once). CLI query example: `gh issue list --repo=futureverse/future`. TUI: `gh extension install dlvhdr/gh-dash` (once), then `gh dash`. AI: `gh extension install github/gh-copilot` (once), then `gh copilot suggest "find files older than one year"`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
