hdf5: Update URLs + add 'make available-version'

--- a/CBI/hdf5/module.lua.tmpl
+++ b/CBI/hdf5/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: library")
-whatis("URL: https://www.hdfgroup.org/downloads/hdf5/, https://portal.hdfgroup.org/display/support/Downloads (changelog), https://www.hdfgroup.org/downloads/hdf5/source-code/ (source code)")
+whatis("URL: https://www.hdfgroup.org/download-hdf5/, https://github.com/HDFGroup/hdf5/releases (releases), https://github.com/HDFGroup/hdf5 (source code)")
 whatis([[
 Description: Hierarchical Data Format (HDF) is a set of file formats (HDF4, HDF5) designed to store and organize large amounts of data. The HDF5 format is designed to address some of the limitations of the HDF4 library, and to address current and anticipated requirements of modern systems and applications.
 Examples: `h5stat --version`.
