--- a/CBI/r/module.lua.tmpl
+++ b/CBI/r/module.lua.tmpl
@@ -140,7 +140,7 @@ pushenv("CMAKE_BIN", "cmake3")
 -- Assert that there is no active Conda environment
 assert_no_conda_environment = function()  
   local conda_env = os.getenv("CONDA_DEFAULT_ENV")
-  if conda_env ~= nil then
+  if conda_env and conda_env ~= "" then
     local action = "warning"
     if v >= "4.5.0" then
       action = "error"
