hdf5: Updated also 'LDFLAGS' per hdf5 instructions

--- a/CBI/gdal/module.lua.tmpl
+++ b/CBI/gdal/module.lua.tmpl
@@ -72,6 +72,7 @@ prepend_path("MANPATH", pathJoin(home, mandir))
 prepend_path("LD_RUN_PATH", pathJoin(home, libdir))
 
 -- building
+prepend_path("PKG_CONFIG_PATH",  pathJoin(home, libdir, "pkgconfig"))
 prepend_path("CPATH",  pathJoin(home, "include"))
 prepend_path("CFLAGS", "-I" .. pathJoin(home, "include"), " ")
 prepend_path("LDFLAGS", "-L" .. pathJoin(home, libdir), " ")
