--- a/CBI/hdf5/module.lua.tmpl
+++ b/CBI/hdf5/module.lua.tmpl
@@ -17,8 +17,8 @@ local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", pathJoin(home, "bin"))
 prepend_path("LD_LIBRARY_PATH", pathJoin(home, "lib"))
--- prepend_path("MANPATH", pathJoin(home, "share", "man"))
 
+local libdir = pathJoin(home, "lib")
 prepend_path("CPATH",  pathJoin(home, "include"))
--- prepend_path("CFLAGS", "-I" .. pathJoin(home, "include"), " ")
--- prepend_path("LDFLAGS", "-L" .. pathJoin(home, "lib"), " ")
+prepend_path("LDFLAGS", "-L" .. libdir, " ")
+
