--- a/CBI/trash-cli/module.lua.tmpl
+++ b/CBI/trash-cli/module.lua.tmpl
@@ -10,7 +10,7 @@ whatis("Keywords: utility, files")
 whatis("URL: https://github.com/andreafrancia/trash-cli, https://github.com/andreafrancia/trash-cli?tab=readme-ov-file#faq (FAQ), https://github.com/andreafrancia/trash-cli/discussions (forum), https://pypi.org/project/trash-cli/#history (change log)")
 whatis([[
 Description: trash-cli trashes files recording the original path, deletion date, and permissions. It provides commands: `trash-put` to trash files and directories, `trash-list` to list trashed files, `trash-restore` to restore a trashed file, `trash-rm` to remove individual files from the trashcan, and `trash-empty` to empty the trashcan.
-Examples: `trash --version`, `trash --help`, and `man trash`. `trash file.txt`, `trash dir/`, `trash-list`, `trash-empty`.
+Examples: `trash --version`, `trash --help`, and `man trash`. `trash file.txt`, `trash dir/`, `trash-list`, and `trash-empty`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
