symphony/5.7.3: bug fixes

--- a/CBI/symphony/module.lua.tmpl
+++ b/CBI/symphony/module.lua.tmpl
@@ -6,7 +6,7 @@ local name = myModuleName()
 local version = myModuleVersion()
 whatis("Version: " .. version)
 whatis("Keywords: library")
-whatis("URL: https://github.com/coin-or/SYMPHONY, https://github.com/coin-or/SYMPHONY (documentation), https://github.com/coin-or/SYMPHONY/releases/ (releases), https://github.com/coin-or/SYMPHONY (source code)")
+whatis("URL: https://github.com/coin-or/SYMPHONY, https://github.com/coin-or/SYMPHONY/wiki (documentation), https://github.com/coin-or/SYMPHONY/releases/ (releases), https://github.com/coin-or/SYMPHONY (source code)")
 whatis([[
 Description: SYMPHONY is an open-source solver, callable library, and development framework for mixed-integer linear programs (MILPs) written in C with a number of unique features 
 Examples: `symphony --version`, `symphony --help`, and `clp`.
