--- a/CBI/quarto/module.lua.tmpl
+++ b/CBI/quarto/module.lua.tmpl
@@ -13,7 +13,7 @@ Examples: `quarto --version` and `quarto --help`.
 Warning: Only the most recent version of this software will be kept.
 ]])
 
-depends_on("pandoc")
+try_load("pandoc")
 
 -- Local variables
 local root = os.getenv("SOFTWARE_ROOT_CBI")
