--- a/CBI/nnn/module.lua.tmpl
+++ b/CBI/nnn/module.lua.tmpl
@@ -17,3 +17,7 @@ local root = os.getenv("SOFTWARE_ROOT_CBI")
 local home = pathJoin(root, name .. "-" .. version)
 
 prepend_path("PATH", home)
+
+-- Configure 'nnn' to use 'trash-cli' when deleting files
+-- try_load("trash-cli")
+-- setenv("NNN_TRASH", "1")
