ollama: example tweaks

--- a/CBI/ollama/module.lua.tmpl
+++ b/CBI/ollama/module.lua.tmpl
@@ -9,7 +9,7 @@ whatis("Keywords: llm")
 whatis("URL: https://ollama.com/, https://github.com/ollama/ollama/releases/ (releases), https://github.com/ollama/ollama/ (source code)")
 whatis([[
 Description: Get up and running with Kimi-K2.5, GLM-5, MiniMax, DeepSeek, gpt-oss, Qwen, Gemma and other models.
-Examples: `ollama --version` and `ollama --help`. `ollama serve` and `ollama pull llama3.2` in another shell. Models are stored under `~/.ollama/`.
+Examples: `ollama --version` and `ollama --help`. `ollama serve` and `ollama pull llama3.2` in another shell (models are stored under `~/.ollama/`). `ollama show llama3.2`.
 ]])
 
 -- Local variables
